samples/_failures_safe/1761513605_b266f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fecdeb18.c: In function ‘main’:
./samples/SAFE/__tmp_fecdeb18.c:160:29: error: expected ‘)’ at end of input
  160 |     print_analysis(&analyzer
      |                   ~         ^
      |                             )
./samples/SAFE/__tmp_fecdeb18.c:160:5: error: expected declaration or statement at end of input
  160 |     print_analysis(&analyzer
      |     ^~~~~~~~~~~~~~
